force-app/main/default/objects/K4B_Onboarding__c/K4B_Onboarding__c.object-meta.xml
<CustomObject>
    <description>Object to manage K4B onboarding</description>
    <label>K4B Onboarding</label>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>K4B Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>