force-app/main/default/objects/K4B_Onboarding__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store related Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>K4B Onboarding</relationshipLabel>
    <relationshipName>K4B_Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>