force-app/main/default/objects/K4B_Onboarding__c/fields/Business_Email__c.field-meta.xml
<CustomField>
    <fullName>Business_Email__c</fullName>
    <description>Keep business email</description>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>