force-app/main/default/objects/K4B_Onboarding__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Keep contact email</description>
    <label>Contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>