force-app/main/default/objects/K4B_Onboarding__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Used to store contact name</description>
    <label>Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>