force-app/main/default/objects/K4B_Onboarding__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to store related Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>K4B Onboarding</relationshipLabel>
    <relationshipName>K4B_Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>