force-app/main/default/objects/K4B_Onboarding__c/fields/Planned_completion_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_completion_date__c</fullName>
    <label>Planned completion date</label>
    <type>DateTime</type>
</CustomField>