force-app/main/default/objects/K4B_Onboarding__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Field to track Onboarding stage</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
            </value>
            <value>
                <fullName>Intro call</fullName>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Account Configuration</fullName>
            </value>
            <value>
                <fullName>Admin training</fullName>
            </value>
            <value>
                <fullName>Team training</fullName>
            </value>
            <value>
                <fullName>Completed Success</fullName>
            </value>
            <value>
                <fullName>Completed Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>