force-app/main/default/objects/K4B_Onboarding__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>Onboarding process start date</description>
    <label>Start date</label>
    <type>DateTime</type>
</CustomField>